# django-guitars

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml  tag-release.yml
core/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: README.md  bump.sh  changelog-notes.sh  release.sh
src/guitars/: __init__.py  apps.py  signals.py  sql.py
src/guitars/management/commands/: makeguitarmigrations.py  makemigrations.py
src/guitars/models/: __init__.py  base.py  soft_deletion.py
tests/: settings.py  test_base.py  test_command.py  test_makemigrations_override.py  test_mti.py  test_signals.py  test_soft_deletion.py  test_version.py
tests/testapp/: models.py
tests/testapp/migrations/: 0001_initial.py  0002_auto_advanced_trigger_function.py  0003_auto_advanced.py  0004_riff.py  0005_ensemble_section_orchestra_and_more.py  0006_auto_advanced_parent_trigger_function.py  0007_auto_advanced.py  0008_album_producer_riff_band.py
